cli/tests/testdata/event_listener_error.ts.out
1
error: Uncaught Error: bar
  throw new Error("bar");
        ^
    at [WILDCARD]/event_listener_error.ts:2:9
    at [WILDCARD]
    at [WILDCARD]/event_listener_error.ts:5:1
2
error: Uncaught (in promise) Error: Unhandled error event.
    at deno:ext/web/16_report_error.js:[WILDCARD]
